<resources>
    <string name="app_name">Meeting App</string>
    <string name="my_data">My data</string>
    <string name="user_data">User data</string>
    <string name="full_name">Full Name</string>
    <string name="hourly_rate">Hourly rate</string>
    <string name="save">Save</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="edit_meeting">Edit Meeting</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="continue_meeting">Continue Meeting</string>
    <string name="meetings">Meetings</string>
    <string name="meeting_data">Meeting data</string>
    <string name="requests_data">Requests data</string>
    <string name="meetings_data">Meetings</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="meeting_type">Meeting type</string>
    <string name="type_hidden">Hidden</string>
    <string name="type_private">Private</string>
    <string name="type_public">Public</string>
    <string name="stop_meeting">Stop Meeting</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="send_request">Send Request</string>
    <string name="current_meeting_cost_label">Current meeting cost</string>
    <string name="euro_price_pattern">€ %.02f</string>
    <string name="current_meeting_tracked_time_label">The meeting has been running for</string>
    <string name="current_meeting_tracked_time">%d minutes</string>
    <string name="participants">Participants</string>
    <string name="add_new_participant">Add new participant</string>
    <string name="status">Status:</string>
    <string name="requested_by">Requested by:</string>
    <string name="type">Type:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="retry">Retry</string>
    <string name="requests">Requests</string>
    <string name="location_is_turned_off">Location is turned off</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
</resources>