<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.addMeeting.AddMeetingActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewShape"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/shape_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHeader"
            style="@style/TextAppearance.Shrine.Headline6.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/add_meeting"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBackIcon"
            app:layout_constraintTop_toTopOf="@+id/ivBackIcon" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivBackIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tvInfo"
            style="@style/TextAppearance.Shrine.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginTop="@dimen/normalMargin"
            android:text="@string/meeting_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewShape" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiName"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normalMargin"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginTop="16dp"
            android:hint="@string/meeting_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInfo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/meeting_type"
            android:textColor="@color/rbTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiName" />

        <RadioGroup
            android:id="@+id/rgTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvType">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbPublic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/raleway_medium"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/type_public"
                android:textColor="@color/rbTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/Widget.Shrine.RadioButton" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbPrivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway_medium"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/type_private"
                android:textColor="@color/rbTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/Widget.Shrine.RadioButton" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbHidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway_medium"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/type_hidden"
                android:textColor="@color/rbTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/Widget.Shrine.RadioButton" />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>

    <com.meetings.android.view.ProgressButton
        android:id="@+id/btStartMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:progressButtonBackground="?attr/colorAccent"
        app:progressButtonIcon="@drawable/ic_play"
        app:progressButtonText="@string/start_meeting" />
</android.support.design.widget.CoordinatorLayout>