<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.login.LoginActivity">

    <View
        android:id="@+id/viewShape"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/shape_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivBackIcon"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/viewShape"
        app:layout_constraintEnd_toStartOf="@+id/tvHeader"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/tvHeader"
        style="@style/TextAppearance.Shrine.Headline6.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/viewShape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBackIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfo"
        style="@style/TextAppearance.Shrine.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="16dp"
        android:text="@string/my_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewShape" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiName"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/normalMargin"
        android:hint="@string/full_name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiCost"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:hint="@string/hourly_rate"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiName">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <com.meetings.android.view.ProgressButton
        android:id="@+id/btSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiCost"
        app:progressButtonBackground="?attr/colorAccent"
        app:progressButtonIcon="@drawable/ic_done"
        app:progressButtonText="@string/save" />
</android.support.constraint.ConstraintLayout>